--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -4,14 +4,25 @@ body {
 
 .entry-date {
     font-size: 0.8em;
-    color: #BABABA;
 }
 
 .entry-value {
-    margin-top: 5px;
+    margin-top: 0.8em;
     font-size: 1.2em;
 }
 
 #header-title {
     color: white;
+}
+
+.tag {
+    color: #2b7bb9;
+}
+
+.important {
+    color: #E1B041;
+}
+
+.gray {
+    color: #BABABA;
 }
