--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .entry-date {
-    font-size: 0.8em;
+    font-size: 1em;
 }
 
 .entry-value {
@@ -19,10 +19,14 @@ body {
     color: #2b7bb9;
 }
 
-.important {
+.task {
     color: #E1B041;
 }
 
 .gray {
     color: #BABABA;
+}
+
+[hidden] {
+    display: none !important;
 }
